--- a/src/pages/RegisterPage/RegisterPage.css
+++ b/src/pages/RegisterPage/RegisterPage.css
@@ -4,7 +4,11 @@
     width: 320px;
     height: 568px;
     padding: 0px 0px 0px 0px;
-    background-color: #ffffff;
+    background-image: url(../../img/fondo.png);
+  }
+
+  .borde {
+border: none;
   }
 
   .Vezapp-Button-Login {
@@ -18,18 +22,18 @@
 
   .Frame-1 {
   display: flex;
-flex-direction: column;
-align-items: flex-start;
-padding: 78px 8px 8px 8px;
+  flex-direction: column;
+  align-items: flex-start;
+  padding: 78px 8px 8px 8px;
 
-width: 186px;
-height: 268px;
-left: 66.87px;
-top: 60px;
+  width: 186px;
+  height: 268px;
+  left: 66.87px;
+  top: 60px;
 
-background: #FFFFFF;
-opacity: 0.9;
-border-radius: 12px;
+  
+  opacity: 0.9;
+  border-radius: 12px;
 
 }
 
@@ -55,6 +59,7 @@ border-radius: 12px;
   /* Neutral / Grey 800 */
   
   color: #323F4B;
+  font-weight: bold;
   
   /* Inside Auto Layout */
   
