--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,54 +1,48 @@
-.mainContainer{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-}
-
-.BG{
-    position: absolute;
-    width: 100%;
-    height: 100%;
-    transform: translate(0px, 240px);
-    z-index: -2;
-}
-
-.gradientBG{
-    position: absolute;
-    width: 100%;
-    height: 100%;
+.btn-157 {
+    background-image: url(../../img/Initial.png);
+    background-size:cover;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    height: 30px;
+    width: 195px;
     left: 0px;
     top: 0px;
-    background: linear-gradient(179.58deg, rgba(255, 255, 255, 0) 21.14%, #FFFFFF 75.62%), linear-gradient(180deg, rgba(227, 249, 166, 0) 36.22%, #E3F9A6 66.93%);
-    z-index: -1;
+    border: none;
 }
 
-.loginForm{
+.Container42 {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-direction: column;
-    padding: 40px;
-    margin-top: 350px;
 }
 
-.titleLogin{
-    font-family: Lato;
-    font-style: normal;
-    font-weight: bold;
-    font-size: 24px;
-    line-height: 29px;
-    color: #188161;
+.frame {
+    margin-bottom: 50px;
 }
 
-label{
-    font-family: Lato;
-    font-style: normal;
-    font-weight: normal;
-    font-size: 14px;
-    line-height: 140%;
-    color: #188161;
-    margin-bottom: 10px;
+.happy-box69 {
+
 }
 
-input{
-    background: #FDFFFA;
-    border: 1px solid #188161;
+.happy-box78 {
+
+left: 0%;
+right: 0%;
+top: 0%;
+bottom: 0%;
+
+background: #FFF0D3;
+border-radius: 6px;
+
+height: 34px;
+width: 225px;
+left: 0px;
+top: 0px;
+
 }
+
+
+
