--- a/src/pages/Dasboard/Dasboard.css
+++ b/src/pages/Dasboard/Dasboard.css
@@ -1,98 +1,7 @@
-.Frame-1 {
-    width: 160px;
-    height: 39.5px;
-    margin: 0 0 4.5px;
-    padding: 9.8px 0;
-  }
-  .Ellipse-1 {
-    width: 20px;
-    height: 20px;
-    margin: 0 0 0 3.8px;
-  }
-/* -------------------------------------------- */
-  .Rectangle-1 {
-      display: flex;
-    width: 159.8px;
-    height: 60.2px;
-    margin: 0 0 6.8px;
-    padding: 0 85px 0.2px 7.8px;
-    background-color: #cbd2d9;
-  }
-
-/* RANGE */
-.User-name-rank {
-    width: 67px;
-    height: 60px;
-    padding: 8px 4px 30px 9.5px;
-  }
-
-/* imagen div profile */
-.Vezappimage {
-  width: 81.5px;
-  height: 65px;
-  margin: 2px 3.5px 0 74.8px;
-  padding: 20.5px 29px 20.5px 28.5px;
-  border-radius: 8px;
-  border: solid 0.3px #323f4b;
-  background-color: #e3e7eb;
+.Rectangle-1{
+  background-image: linear-gradient(to right,#FFF176,#CE8800
+  );
+  width: 320px;
+    height: 220px;
+    border-radius: 0px 0px 10px 10px;
 }
-
-/* ----------------------------------------------- */
-  .Vezapp-Beer-Card {
-    width: 146px;
-    height: 52px;
-    margin: 5px 0 0 14px;
-    padding: 8.8px 3.2px 11.2px 58.8px;
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.25);
-    background-color: #cbd2d9;
-  }
-  .Rectangle-44 {
-    width: 56px;
-    height: 58px;
-    margin: 5px 90px 75.5px 14px;
-    padding: 0 0 6px;
-    background-color: #e3e7eb;
-  }
-  .Size {
-    width: 16px;
-    height: 16px;
-    padding: 2px 2px 2px 2px;
-  }
-  .Card-Ghost {
-    width: 83.2px;
-    height: 21px;
-    padding: 0.5px 3.2px 15.5px 0;
-  }
-  .experimenta {
-    width: 80px;
-    height: 5px;
-    font-family: Mulish;
-    font-size: 5px;
-    font-weight: 800;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1;
-    letter-spacing: 0.75px;
-    text-align: left;
-    color: #7b8794;
-  }
-  .Drink-today {
-    width: 80px;
-    height: 22.5px;
-    font-family: Mulish;
-    font-size: 7.5px;
-    font-weight: bold;
-    font-stretch: normal;
-    font-style: normal;
-    line-height: 1.2;
-    letter-spacing: 0.08px;
-    text-align: left;
-    color: #323f4b;
-  }
-  /* ------------------------------------- */
-  .Goals {
-    width: 160px;
-    height: 80.5px;
-    margin: 57px 0 1px;
-    padding: 5.3px 21px;
-  }
