--- a/src/components/Half-perfil/half-perfil.css
+++ b/src/components/Half-perfil/half-perfil.css
@@ -4,6 +4,7 @@
     width: 320px;
     height: 220px;
     border-radius: 0px 0px 10px 10px;
+    margin-bottom: 1px;
   }
   .profile69{
       background-image: url(../../img/prueba1\ 1.png);
