--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,11 @@
 body, html{
-  background-color: #FFC34F;
-  border: 0;
+  width: 100%;
   display: flex;
   justify-content: center;
-  align-items: center;
+  
 }
 
 .screen-init65 {
-  width: 100%;
-  width: 320px;
-  height: 568px;
+  /* width: 100%; */
   background-image: url(../src/img/fondo.png)
 }
