--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -3,4 +3,10 @@
     justify-content: space-around;
     align-items: flex-end;
     margin-button: 0 ;
+    background-color: #ffffff;
+    box-shadow: 0px -3px 4px rgba(81, 44, 10, 0.5);
+}
+.Vezapp-Item-default:hover{
+    
+    background-color: violet;
 }
