--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -1,5 +1,3 @@
-
-
 .Container42 {
     display: flex;
     justify-content: center;
@@ -8,41 +6,52 @@
 }
 
 .frame {
-    margin-bottom: 50px;
+    margin-left: 58.8px;
+    margin-top: 47.55px;
+    position: absolute;
 }
 
-
-
 .happy-box78 {
+    width: 319px;
+    height: 60px;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    background: #FFF0D3;
+    border-radius: 8px;
+    border: 1px solid #FFFFFF;
+    margin-top: 125px;
+}
 
-left: 0%;
-right: 0%;
-top: 0%;
-bottom: 0%;
-
-background: #FFF0D3;
-border-radius: 6px;
-
-height: 34px;
-width: 225px;
-left: 0px;
-top: 0px;
+.happy-box79 {
+    border: 2px solid #B97B00;
+    width: 317px;
+    height: 58px;
+    left: 0%;
+    right: 0%;
+    top: 0%;
+    bottom: 0%;
+    background: #FFFFFF;
+    border-radius: 8px;
 
 }
 
 .btn-157 {
-    /* background-image: url(../../img/boton1.png); */
     background-size: 100%;
     background: none;
-    
-    height: 64px;
-    width: 180px;
+    height: 63px;
+    width: 289px;
     margin-right: 25px;
     top: 0px;
     border: none;
 }
 .frameimg{
-    height: 64px;
-    width: 180px;
+    height: 63px;
+    width: 289px;
+    }
+
+.distance {
+    margin-top: 45px;
 }
 
