--- a/src/App.css
+++ b/src/App.css
@@ -19,6 +19,7 @@ body, html{
 
 .screen-scan {
   background-image: url(../src/img/fondoscan.png);
+  background-repeat: no-repeat;
 }
 
 .screen-search {
