--- a/src/App.css
+++ b/src/App.css
@@ -20,6 +20,7 @@ body, html{
 .screen-scan {
   background-image: url(../src/img/fondoscan.png);
   background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .screen-search {
