--- a/src/components/Toptitle/toptitle.css
+++ b/src/components/Toptitle/toptitle.css
@@ -1,5 +1,5 @@
 .title {
     width: 375px;
-    height: 71px;
-    background-color: red;
+    height: 78px;
+    background-color: rgb(217, 255, 0);
 }
