--- a/src/components/NavBar/NavBar.css
+++ b/src/components/NavBar/NavBar.css
@@ -2,11 +2,17 @@
     display:flex;
     justify-content: space-around;
     align-items: flex-end;
-    margin-button: 0 ;
     background-color: #ffffff;
     box-shadow: 0px -3px 4px rgba(81, 44, 10, 0.5);
 }
 .Vezapp-Item-default:hover{
     
     background-color: violet;
+}
+
+.navbarbox {
+    width: 375px;
+    height: 56px;
+    position: fixed;
+    bottom: 0px;
 }
