--- a/src/pages/RegisterPage/RegisterPage.css
+++ b/src/pages/RegisterPage/RegisterPage.css
@@ -1,5 +1,3 @@
-
-
   .borde {
 border: none;
   }
@@ -36,18 +34,29 @@ margin-left: 10px;
     border: none;
 }
 
-.distance {
-  margin-top: 45px;
-}
-
 p {
 font-size: 32px;
 text-align: center;
 font-weight: 700;
 line-height: 46.34px;
-top: 16px;
 font-style: normal;
 align-items: center;
 color: #512C0A;
+margin-top: 36px;
+margin-bottom: 60px;
+}
 
+.hola {
+  margin-top: 24px;
+  margin-left: 55px;
+  margin-bottom: 66px;
+}
+
+.acepto {
+font-family: Noto Sans SC;
+font-style: normal;
+font-weight: bold;
+font-size: 16px;
+line-height: 23px;
+color: #512C0A;
 }
