--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -55,3 +55,11 @@
     margin-top: 45px;
 }
 
+a {
+font-family: Noto Sans SC;
+font-style: normal;
+font-size: 16px;
+line-height: 23px;
+color: #512C0A;
+}
+
