--- a/src/pages/Scan/Scan.css
+++ b/src/pages/Scan/Scan.css
@@ -22,3 +22,15 @@
   width: 175px;
   height: 585.51px;
 }
+
+.title2 {
+  width: 375px;
+  height: 78px;
+  margin: 0px;
+  background-color: #ffffff;
+}
+
+.Escner-etiquetas {
+  width: 375px;
+  height: 582px;
+}
