--- a/src/components/NewFoodBe/NewFoodBe.css
+++ b/src/components/NewFoodBe/NewFoodBe.css
@@ -4,5 +4,6 @@
     height: 220px;
     border-radius: 5px;
     margin: 0;
-    text-align: center;    
+    text-align: center;
+    overflow: hidden;
 }
