--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -3,5 +3,45 @@
     );
     width: 320px;
       height: 220px;
-      border-radius: 0px 0px 10px 10px;
+      border-radius: 0px 0px 0px 0px;
   }
+
+  .title3 {
+    width: 375px;
+    height: 78px;
+    margin: 0px;
+    background-color: #ffffff;
+  }
+  .backimg{
+  width: 70px;
+  height: 78px;
+  float: left;
+  margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .searchtitle{
+    font-family: Noto Sans SC;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 32px;
+    line-height: 46px;
+    color: #342A21;
+    width: 230px;
+    height: 78px;
+    display: inline-block;
+    text-align: center;
+  }
+  .filtroimg{
+    width: 70px;
+    height: 78px;
+    float: right;
+    margin: 0px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    }
+    .toptitle{
+      margin-top: 15px;
+    }
