--- a/src/pages/Infobeer/Infobeer.css
+++ b/src/pages/Infobeer/Infobeer.css
@@ -3,24 +3,22 @@
     height: 78px;
     margin: 0px;
   }
-
 .card-beer{
     width: 375px;
     height: 523px;
 }  
 .position1{
-position: absolute;
-width: 244px;
-height: 392px;
-left: 8.06px;
-top: 159.89px;
-background-color: red;
-
-background: #D9D9D9;
-box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
-backdrop-filter: blur(4px);
-border-radius: 12px;
-transform: rotate(-3.87deg);
+    position: absolute;
+    width: 244px;
+    height: 392px;
+    left: 18.06px;
+    top: 159.89px;
+    background-color: red;
+    background: #D9D9D9;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    transform: rotate(-3.87deg);
 }
 .position2{
     position: absolute;
@@ -29,22 +27,43 @@ transform: rotate(-3.87deg);
     left: 61.71px;
     top: 127px;
     background-color: brown;
-
     box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
-backdrop-filter: blur(4px);
-border-radius: 12px;
-z-index: 1;
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    z-index: 1;
 }
 .position3{
     position: absolute;
     width: 244px;
     height: 392px;
-    left: 122.86px;
+    left: 112.86px;
     top: 141.69px;
     background-color: orange;
-
     box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
-backdrop-filter: blur(4px);
-border-radius: 12px;
-transform: rotate(4.33deg);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    transform: rotate(4.33deg);
+    transition: 2s;
 }
+.position3:hover {
+    position: absolute;
+    width: 252.3px;
+    height: 453.36px;
+    left: 61.71px;
+    top: 127px;
+    background-color: brown;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    z-index: 1;
+}
+
+/*
+.rotation1{
+    position: absolute; 
+	overflow: hidden;
+	-webkit-transition: all 0.5s ease;
+	-moz-transition: all 0.5s ease;
+	-o-transition: all 0.5s ease;
+}
+*/
