--- a/src/pages/Infobeer/Infobeer.css
+++ b/src/pages/Infobeer/Infobeer.css
@@ -7,7 +7,7 @@
     width: 375px;
     height: 523px;
 }  
-.position1{
+.left{
     position: absolute;
     width: 244px;
     height: 392px;
@@ -19,8 +19,10 @@
     backdrop-filter: blur(4px);
     border-radius: 12px;
     transform: rotate(-3.87deg);
+    transition:2s;
+    z-index: 0;
 }
-.position2{
+.active{
     position: absolute;
     width: 252.3px;
     height: 453.36px;
@@ -31,8 +33,9 @@
     backdrop-filter: blur(4px);
     border-radius: 12px;
     z-index: 1;
+    transition:2s;
 }
-.position3{
+.right{
     position: absolute;
     width: 244px;
     height: 392px;
@@ -45,7 +48,11 @@
     transform: rotate(4.33deg);
     transition: 2s;
 }
-.position3:hover {
+/*
+
+posicion ATRAS
+
+.derecha a centro {
     position: absolute;
     width: 252.3px;
     height: 453.36px;
@@ -56,14 +63,96 @@
     backdrop-filter: blur(4px);
     border-radius: 12px;
     z-index: 1;
+    transform: rotate(0deg);
+}
+.centro a izquierda {
+    position: absolute;
+    width: 244px;
+    height: 392px;
+    left: 18.06px;
+    top: 159.89px;
+    background-color: red;
+    background: #D9D9D9;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    transform: rotate(-3.87deg);
+    z-index: 0;
 }
 
-/*
-.rotation1{
-    position: absolute; 
-	overflow: hidden;
-	-webkit-transition: all 0.5s ease;
-	-moz-transition: all 0.5s ease;
-	-o-transition: all 0.5s ease;
+.izquierda a derecha {
+    position: absolute;
+    width: 244px;
+    height: 392px;
+    left: 112.86px;
+    top: 141.69px;
+    background-color: orange;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    transform: rotate(4.33deg);
+    z-index: 1;
+    
 }
+
 */
+
+.Vleft{
+    display:inline-block;
+    margin-left:25px;
+}
+
+.Vright{
+    display:inline-block;
+    margin-left:280px;
+}
+
+
+
+/*posicion ADELANTE*/
+
+/*derecha a izquierda*/
+.right:hover {
+    position: absolute;
+    width: 244px;
+    height: 392px;
+    left: 18.06px;
+    top: 159.89px;
+    background-color: red;
+    background: #D9D9D9;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    transform: rotate(-3.87deg);
+    z-index: 0;
+}
+/* izquierda a centro*/
+.left:hover {
+    position: absolute;
+    width: 252.3px;
+    height: 453.36px;
+    left: 61.71px;
+    top: 127px;
+    background-color: brown;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    z-index: 1;
+    transform: rotate(0deg);
+    
+}
+/* de centro a derecha */
+.active:hover {
+    position: absolute;
+    width: 244px;
+    height: 392px;
+    left: 112.86px;
+    top: 141.69px;
+    background-color: orange;
+    box-shadow: 4px -2px 23px rgba(81, 44, 10, 0.4);
+    backdrop-filter: blur(4px);
+    border-radius: 12px;
+    transform: rotate(4.33deg);
+    z-index: 0;
+    
+}
