--- a/src/pages/Scan/Scan.css
+++ b/src/pages/Scan/Scan.css
@@ -22,12 +22,6 @@
   width: 175px;
   height: 585.51px;
 }
-<<<<<<< HEAD
-.prueba{
-  overflow: hidden;
-  width: 300px;
-  height: 100px;
-=======
 
 .title2 {
   width: 375px;
@@ -39,5 +33,8 @@
 .Escner-etiquetas {
   width: 375px;
   height: 582px;
->>>>>>> cd4609f108be1a11441326dcc8b96debd38225f1
+}
+.imgBuffer{
+  width: 175px;
+  height: 385.51px
 }
