--- a/src/pages/Scan/Scan.css
+++ b/src/pages/Scan/Scan.css
@@ -34,7 +34,12 @@
   width: 375px;
   height: 582px;
 }
-.imgBuffer{
-  width: 175px;
+
+.imgBuffer video{
+  margin-left: 50px;
+  width: 275px;
   height: 385.51px
+}
+.imgBuffer canvas{
+  display: none
 }
