--- a/src/pages/Dasboard/Dasboard.css
+++ b/src/pages/Dasboard/Dasboard.css
@@ -8,7 +8,7 @@
 
 .title-dash{
   margin: 0px;
-  font-family: Noto Sans SC;
+  font-family: Noto_Sans_SC;
   font-style: normal;
   font-weight: bold;
   font-size: 24px;
