--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -56,7 +56,7 @@
 }
 
 .usual-link {
-font-family: Noto Sans SC;
+font-family: Noto_Sans_SC;
 font-style: normal;
 font-size: 16px;
 line-height: 23px;
