--- a/src/components/DrawFinder/DrawFinder.css
+++ b/src/components/DrawFinder/DrawFinder.css
@@ -10,10 +10,14 @@
     overflow: hidden;
     width: 321px;
     height: 46px;
-
     display: flex;
     justify-content: flex-end;
-    align-items: center
+    align-items: center;
+    font-family: Noto_Sans_SC;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 20px;
+    line-height: 29px;
 }
 
 .descrip-beer {
@@ -27,7 +31,7 @@
     display: flex;
     align-items: center;
 
-    font-family: Noto Sans SC;
+    font-family: Noto_Sans_SC;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
