--- a/src/components/NewFoodBe/article1/article1.css
+++ b/src/components/NewFoodBe/article1/article1.css
@@ -10,12 +10,6 @@
 .rectangule-n3{
     overflow: hidden;
     margin: 0px;
-    /*
-    display:flex;
-    flex-direction: column;
-    font-size: 10px;
-    color: black;
-    text-decoration: none; */
 }
 .img-n2{
     border-radius: 16px 0px 0px 16px;
@@ -28,9 +22,13 @@
 .margin99{
     margin: 5px;
     overflow: hidden;
-    
+    font-family: Noto Sans SC;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 16px;
+    line-height: 23px;
+    color: #512C0A;
 }
-
 
 a:link, a:visited, a:active {
     text-decoration:none;
