--- a/src/pages/Articles/Article.css
+++ b/src/pages/Articles/Article.css
@@ -13,7 +13,7 @@
 }
 
 .article-fonts{
-    font-family: Noto Sans SC;
+    font-family: Noto_Sans_SC;
     font-style: normal;
     font-weight: normal;
     font-size: 13px;
