--- a/src/pages/Profile/Profile.css
+++ b/src/pages/Profile/Profile.css
@@ -22,7 +22,7 @@
     align-items: center;
   }
   .searchtitle{
-    font-family: Noto Sans SC;
+    font-family: Noto_Sans_SC;
     font-style: normal;
     font-weight: bold;
     font-size: 32px;
@@ -67,7 +67,7 @@
     }
 
     .Mybeertitle2{
-      font-family: Noto Sans SC;
+      font-family: Noto_Sans_SC;
       font-style: normal;
       font-weight: bold;
       font-size: 24px;
