--- a/src/pages/RegisterPage/RegisterPage.css
+++ b/src/pages/RegisterPage/RegisterPage.css
@@ -53,7 +53,7 @@ margin-bottom: 60px;
 }
 
 .acepto {
-font-family: Noto Sans SC;
+font-family: Noto_Sans_SC;
 font-style: normal;
 font-weight: bold;
 font-size: 16px;
