--- a/src/pages/Search/Search.css
+++ b/src/pages/Search/Search.css
@@ -13,7 +13,7 @@ margin: 0px;
   align-items: center;
 }
 .searchtitle{
-  font-family: Noto Sans SC;
+  font-family: Noto_Sans_SC;
   font-style: normal;
   font-weight: bold;
   font-size: 32px;
