--- a/src/pages/RegisterPage/RegisterPage.css
+++ b/src/pages/RegisterPage/RegisterPage.css
@@ -60,3 +60,19 @@ font-size: 16px;
 line-height: 23px;
 color: #512C0A;
 }
+#mess{
+  font-size: 10px;
+  background-color: red;
+  position: fixed;
+  left: 70px;
+  top: 470px;
+  height: 20px;
+  width: 200px;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center
+}
+.Display{
+  display: inline;
+}
