--- a/src/pages/login/login.css
+++ b/src/pages/login/login.css
@@ -63,3 +63,77 @@ line-height: 23px;
 color: #512C0A;
 }
 
+.nodisplayi{
+    display: none
+}
+.displayi{
+    display: inline
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* prueba */
+/* Popup style */
+.popup-box {
+    font-family: Noto Sans SC;
+    font-style: normal;
+    font-size: 8px;
+    line-height: 23px;
+    color: #512C0A;
+  }
+   
+  .box {
+    position: relative;
+    width: 70%;
+    margin: 0 auto;
+    height: auto;
+    max-height: 70vh;
+    margin-top: calc(100vh - 85vh - 20px);
+    background: #fff;
+    border-radius: 4px;
+    padding: 20px;
+    border: 1px solid #999;
+    overflow: auto;
+  }
+   
+  .close-icon {
+    content: 'x';
+    cursor: pointer;
+    position: fixed;
+    right: calc(15% - 30px);
+    top: calc(100vh - 85vh - 33px);
+    background: #ededed;
+    width: 25px;
+    height: 25px;
+    border-radius: 50%;
+    line-height: 20px;
+    text-align: center;
+    border: 1px solid #999;
+    font-size: 20px;
+  }
